src/objects/Portal_Application_Contact_Visibility__mdt.object
<CustomObject>
    <description>Used to control the access to Portal Applications based on the Contact</description>
    <fields>
        <fullName>Add_Service_On_Checked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Service On Checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checkbox_Fieldname__c</fullName>
        <label>Checkbox Fieldname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <defaultValue>&quot;ALL&quot;</defaultValue>
        <description>This field must contain a comma separated Country ISO Codes, and optionally a - sign to exclude countries instead of include them</description>
        <label>Country</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Class__c</fullName>
        <defaultValue>&quot;ALL&quot;</defaultValue>
        <description>This field must match with Account.Location_Class field</description>
        <label>Location Class</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <defaultValue>&quot;ALL&quot;</defaultValue>
        <description>This field must match with Account.Location_Type field</description>
        <label>Location Type</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <description>Metadata Relationship(Portal Application Setting)</description>
        <label>Portal Application Setting</label>
        <referenceTo>Portal_Application_Setting__mdt</referenceTo>
        <relationshipLabel>Portal Application Contacts Visibility</relationshipLabel>
        <relationshipName>Portal_Application_Contacts_Visibility</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Remove_Service_On_Unchecked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove Service On Unchecked</label>
        <type>Checkbox</type>
    </fields>
    <label>Portal Application Contact Visibility</label>
    <pluralLabel>Portal Application Contacts Visibility</pluralLabel>
</CustomObject>